[project]
name = "object_detect_count"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "cthsu", email = "chuntsehsu@gmail.com"},
]
dependencies = [
    "pydantic>=2.9.2",
    "mypy>=1.11.2",
    "pre-commit>=3.8.0",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "ultralytics>=8.3.3",
    "argparse>=1.4.0",
    "opencv-python-headless>=4.10.0.84",
    "mypy>=1.11.2",
    "torch>=2.4.1",
    "pycocotools>=2.0.8",
    "matplotlib>=3.9.2",
]
